finalizando front-end

--- a/adminHome.html
+++ b/adminHome.html
@@ -118,18 +118,16 @@
 
             <!-- Shortcuts Section -->
             <section class="shortcuts-section">
-                <h2 class="section-title">Atalhos</h2>
+                <h2 class="title section-title">Atalhos</h2>
                 <div class="shortcuts-grid">
                     <button class="shortcut-btn">Emprestar livros</button>
-                    <button class="shortcut-btn">Retirada de livros</button>
-                    <button class="shortcut-btn">Confirmar devolução</button>
-                    <button class="shortcut-btn">Verificar usuários</button>
+                    <button class="shortcut-btn">Retirada e Devolução</button>
                     <button class="shortcut-btn">Todos os livros</button>
+                    <button class="shortcut-btn">Verificar usuários</button>
                 </div>
             </section>
         </main>
     </div>
-
     <script src="assets/js/script.js"></script>
 </body>
 
