--- a/adminLivrosHistorico.html
+++ b/adminLivrosHistorico.html
@@ -68,8 +68,8 @@
                     <div class="table-text">
                         <h2 class="title text-start">Histórico de empréstimos</h2>
                     </div>
-                    <div class="search-box">
-                        <input type="text" class="input" placeholder="Buscar pelo RA">
+                    <div class="search-box-table">
+                        <input type="text" class="input" placeholder="Buscar...">
                     </div>
                 </div>
 
