--- a/adminLivrosRetiradaDevolucao.html
+++ b/adminLivrosRetiradaDevolucao.html
@@ -68,7 +68,7 @@
                     <div class="table-text">
                         <h2 class="title text-start">Retirada e devolução de livros</h2>
                     </div>
-                    <div class="search-box">
+                    <div class="search-box-table">
                         <input type="text" class="input" placeholder="Buscar pelo RA">
                     </div>
                 </div>
