--- a/adminValidarUsuarios.html
+++ b/adminValidarUsuarios.html
@@ -69,7 +69,7 @@
                         <h2 class="title text-start">Validar Usuários</h2>
                         <p>Clique em <span>ativar</span> para validar os usuários cadastrados</p>
                     </div>
-                    <div class="search-box">
+                    <div class="search-box-table">
                         <input type="text" class="input " placeholder="Buscar pelo RA">
                     </div>
                 </div>
