--- a/adminCadastrarLivros.html
+++ b/adminCadastrarLivros.html
@@ -41,11 +41,11 @@
                 <details class="accordion" id="books-acc">
                     <summary aria-controls="submenu-books" class="active" aria-expanded="false">
                         <span class="material-symbols-outlined">auto_stories</span>
-                        <span >Livros </span>
+                        <span>Livros </span>
                         <span class="material-symbols-outlined" id="icon-align-right"> keyboard_arrow_down</span>
                     </summary>
                     <div id="submenu-books" class="submenu" role="region" aria-label="Submenu Livros">
-                         <a href="adminCadastrarLivros.html" >Cadastrar</a>
+                        <a href="adminCadastrarLivros.html">Cadastrar</a>
                         <a href="adminEmprestarLivros.html">Emprestar livros</a>
                         <a href="#retirada">Retirada / Devolução de livros</a>
                         <a href="#historico">Histórico</a>
@@ -83,7 +83,7 @@
 
                         <div class="form-group flex-grow">
                             <div class="form-group ">
-                                <label for="title" >Título <span class="required">*</span></label>
+                                <label for="title">Título <span class="required">*</span></label>
                                 <input type="text" id="title" name="title" class="input" required>
                             </div>
                             <div class="form-group">
@@ -109,32 +109,58 @@
                             <small class="help-text">Use ctrl para selecionar mais de um</small>
                         </div>
                         <div class="form-column">
-                            <div class="form-row">
-                                <div class="form-group ">
-                                    <label for="year">Ano de Lançamento</label>
-                                    <input type="number" id="year" name="year" min="1000" max="2100" class="input">
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="quantity">Quantidade total<span class="required">*</span></label>
-                                    <input type="number" id="quantity" name="quantity" min="1" class="input" required>
-                                </div>
+                            <div class="form-group">
+                                <label for="publisher">Editora<span class="required">*</span></label>
+                                <input type="text" id="publisher" name="publisher" class="input" required>
                             </div>
-                            <div class="form-row">
-                                <div class="form-group">
-                                    <label for="location">Localização</label>
-                                    <input type="text" id="location" name="location" class="input"
-                                        placeholder="EX: A, prateleira 5">
-                                </div>
+                            <div class="form-group">
+                                <label for="edition">Edição</label>
+                                <input type="text" id="edition" name="edition" class="input"
+                                    placeholder="EX: 3ª edição">
                             </div>
                         </div>
-                    </div>
+                        <div class="form-column">
 
+                            <div class="form-group">
+                                <label for="isbn">ISBN</label>
+                                <input type="text" id="isbn" name="isbn" class="input"
+                                    placeholder="EX: 978-3-16-148410-0">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="language">Idioma</label>
+                                <input type="text" id="language" name="language" class="input"
+                                    placeholder="EX: Português">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="pages">Número de Páginas</label>
+                            <input type="number" id="pages" name="pages" min="1" class="input">
+                        </div>
+                        <div class="form-group ">
+                            <label for="year">Ano de Lançamento</label>
+                            <input type="number" id="year" name="year" min="1000" max="2100" class="input">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="quantity">Quantidade total<span class="required">*</span></label>
+                            <input type="number" id="quantity" name="quantity" min="1" class="input" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="location">Localização</label>
+                            <input type="text" id="location" name="location" class="input"
+                                placeholder="EX: A, prateleira 5">
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label for="synopsis">Sinopse <span class="optional">(opcional)</span></label>
                         <textarea id="synopsis" name="synopsis" rows="4" class="input"></textarea>
                     </div>
-
                     <div class="form-actions">
                         <button type="submit" class="btn btn-submit">Salvar</button>
                     </div>
