admin exibir dados dos livros

--- a/adminLivroInfo.html
+++ b/adminLivroInfo.html
@@ -67,7 +67,7 @@
         <main class="content">
             <div class="card card-mobile-none " id="card-book-loan">
 
-                <div >
+                <div>
                     <h2 class="title">Título</h2>
                 </div>
 
@@ -79,6 +79,31 @@
 
                     <div class="detail-row">
                         <span class="label">Categoria:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">Editora:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">Edição:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">ISBN:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">Idioma:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">Número de Páginas:</span>
                         <span class="detail-value"></span>
                     </div>
 
