--- a/adminEmprestarLivros.html
+++ b/adminEmprestarLivros.html
@@ -70,7 +70,7 @@
                 <section class="search-section">
                     <label>Buscar livro:</label>
                     <div class="search-box">
-                        <input type="text" placeholder="Busque pelo nome do livro" class="input">
+                        <input type="text" placeholder="Busque pelo título do livro" class="input">
                         <button class="search-btn">
                             <i class="fas fa-search"></i>
                         </button>
