--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <!-- Card de Login -->
         <section class="card card-login">
             <h1 class="title-login">Login</h1>
+            <p>Insira o número de telefone cadastrado para receber o código de verificação</p>
             <!-- formulario -->
             <form class="form-login">
                 <label for="label telefone-login">Telefone</label>
