--- a/adminCadastrarLivros.html
+++ b/adminCadastrarLivros.html
@@ -98,20 +98,20 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="genres">Gênero(s) <span class="required">*</span></label>
-                            <select id="genres" name="genres" class="input" multiple required>
-                                <option value="">Gênero1</option>
-                                <option value="genero1">Gênero1</option>
-                                <option value="genero2">Gênero1</option>
-                                <option value="genero3">Gênero1</option>
-                                <option value="genero4">Gênero1</option>
+                            <label for="genres">Categoria(s)</label>
+                            <select id="genres" name="genres" class="input" multiple >
+                                <option value="">Categoria1</option>
+                                <option value="categoria1">Categoria1</option>
+                                <option value="categoria2">Categoria2</option>
+                                <option value="categoria3">Categoria3</option>
+                                <option value="categoria4">Categoria4</option>
                             </select>
-                            <small class="help-text">Use ctrl para selecionar mais de um</small>
+                            <small class="help-text">Use ctrl para selecionar mais de uma</small>
                         </div>
                         <div class="form-column">
                             <div class="form-group">
-                                <label for="publisher">Editora<span class="required">*</span></label>
-                                <input type="text" id="publisher" name="publisher" class="input" required>
+                                <label for="publisher">Editora</label>
+                                <input type="text" id="publisher" name="publisher" class="input" >
                             </div>
                             <div class="form-group">
                                 <label for="edition">Edição</label>
@@ -122,9 +122,9 @@
                         <div class="form-column">
 
                             <div class="form-group">
-                                <label for="isbn">ISBN</label>
+                                <label for="isbn">ISBN <span class="required">*</span></label>
                                 <input type="text" id="isbn" name="isbn" class="input"
-                                    placeholder="EX: 978-3-16-148410-0">
+                                    placeholder="EX: 978-3-16-148410-0" required>
                             </div>
 
                             <div class="form-group">
@@ -158,8 +158,8 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="synopsis">Sinopse <span class="optional">(opcional)</span></label>
-                        <textarea id="synopsis" name="synopsis" rows="4" class="input"></textarea>
+                        <label for="description">Descrição </label>
+                        <textarea id="description" name="description" rows="4" class="input"></textarea>
                     </div>
                     <div class="form-actions">
                         <button type="submit" class="btn btn-submit">Salvar</button>
