--- a/usuarioCadastro.html
+++ b/usuarioCadastro.html
@@ -17,16 +17,13 @@
             <h1 class="title-login">Cadastro</h1>
             <!-- formulario -->
             <form class="form-login">
-                <label for="nome" class="label">Nome</label>
+                <label for="nome" class="label">Nome Completo <span class="required">*</span></label>
                 <input type="text" id="nome" name="nome" class="input input-primary " required>
 
-                <label for="ra" class="label">RA</label>
+                <label for="ra" class="label">RA <span class="required">*</span></label>
                 <input type="text" id="ra" name="ra" class="input input-primary " required>
 
-                <label for="email" class="label">E-mail</label>
-                <input type="email" id="email" name="email" class="input input-primary " required>
-
-                <label for="telefone" class="label">Telefone</label>
+                <label for="telefone" class="label">Telefone <span class="required">*</span></label>
                 <input type="tel" id="telefone" name="telefone" class="input input-primary " placeholder="+55 (DDD) 99999-9999" required>
 
                 <button type="submit" class="btn btn-full">Salvar</button>
