--- a/usuarioDados.html
+++ b/usuarioDados.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informações do Livro</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Meus Livros</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/global.css">
@@ -38,13 +38,13 @@
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item" href="usuarioDados.html">
+                <a class="nav-item" href="#meus-dados">
                     <span class="material-symbols-outlined">group</span>
                     <span>Meus Dados</span>
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item" href="index.html">
+                <a class="nav-item" href="#meus-dados">
                     <span class="material-symbols-outlined">logout</span>
                     <span>Sair</span>
                 </a>
@@ -53,29 +53,28 @@
         <!-- fim do menu lateral -->
         <div class="backdrop" id="backdrop"></div>
         <!-- conteúdo -->
-        <main class="content layout" role="main">
-            <div class=" info-book-container">
-                <div class="info-book-top-flex">
-                    <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-book-cover">
-                    <div class="info-book-details">
-                        <h2 class="info-book-title title">Nome do Livro</h2>
-                        <div class="info-book-author">Autor do livro</div>
-                        <div class="emprestar-datas">
-                            <strong class="label">Data de empréstimo:</strong> 00/00/0000<br>
-                            <strong class="label">Data de devolução:</strong> 00/00/0000
+        <main class="content flex" role="main">
+            <div class="card card-mobile-none card-dados">
+                <form action="">
+                    <h1 class="title">Meus Dados</h1>
+                    <div class="user-data-container">
+                        <div class="user-data-item">
+                            <label class="label">Nome:</label>
+                            <input class="input" value="João Silva" disabled>
                         </div>
-                    </div>
-                </div>
-                <div class="info-book-loan-dates">
-                    O tempo de retirada do livro na biblioteca é de 8 horas, após o período o empréstimo será cancelado.
-                </div>
-                <div class="empty-space"></div>
-                <div class="btn-container">
-                    <button class="btn info-book-btn">Concluir</button>
-                </div>
+                        <div class="user-data-item">
+                            <label class="label">Ra:</label>
+                            <input class="input" value="joao.silva@example.com" disabled>
+                        </div>
+                         <div class="user-data-item">
+                            <label class="label">Telefone:</label>
+                            <input class="input" value="(11) 98765-4321" >
+                        </div>
+                        <button class="btn btn-success">Salvar</button>
+                </form>
             </div>
-        </main>
     </div>
+    </main>
     <script src="assets/js/script.js"></script>
 </body>
 
