--- a/usuarioHome.html
+++ b/usuarioHome.html
@@ -39,13 +39,13 @@
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item" href="#meus-dados">
+                <a class="nav-item" href="usuarioDados.html">
                     <span class="material-symbols-outlined">group</span>
                     <span>Meus Dados</span>
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item" href="#meus-dados">
+                <a class="nav-item" href="index.html">
                     <span class="material-symbols-outlined">logout</span>
                     <span>Sair</span>
                 </a>
