--- a/usuarioLivroInformacoes.html
+++ b/usuarioLivroInformacoes.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="body-color">
-   <!-- menu -->
+    <!-- menu -->
     <header class="topbar" role="banner">
         <button class="hamburger" aria-label="Abrir menu" aria-controls="sidebar" aria-expanded="false">
             <span class="material-symbols-outlined">menu</span>
@@ -38,13 +38,13 @@
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item" href="#meus-dados">
+                <a class="nav-item" href="usuarioDados.html">
                     <span class="material-symbols-outlined">group</span>
                     <span>Meus Dados</span>
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item" href="#meus-dados">
+                <a class="nav-item" href="index.html">
                     <span class="material-symbols-outlined">logout</span>
                     <span>Sair</span>
                 </a>
@@ -64,6 +64,30 @@
                             <span class="badge badge-outline">gênero</span>
                             <span class="badge badge-outline">gênero</span>
                         </div>
+                    </div>
+                </div>
+                
+                <div class="info-book-content">
+                    <div class="info-book-item">
+                        <span class="label">Editora:</span>
+                        <span class="info-book-value">Nome da Editora</span>
+                    </div>
+                    <div class="info-book-item">
+                        <span class="label">Ano de Publicação:</span>
+                        <span class="info-book-value">2023</span>
+                    </div>
+
+                    <div class="info-book-item">
+                        <span class="label">Número de Páginas:</span>
+                        <span class="info-book-value">350</span>
+                    </div>
+                    <div class="info-book-item">
+                        <span class="label">Idioma:</span>
+                        <span class="info-book-value">Português</span>
+                    </div>
+                    <div class="info-book-item">
+                        <span class="label">Disponibilidade:</span>
+                        <span class="info-book-value"><span class="text-success">Disponível</span></span>
                     </div>
                 </div>
                 <div class="info-book-description">
