--- a/adminEmprestarLivros.html
+++ b/adminEmprestarLivros.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <header class="topbar" role="banner">
         <button class="hamburger" aria-label="Abrir menu" aria-controls="sidebar" aria-expanded="false">
             <span class="material-symbols-outlined">menu</span>
@@ -22,22 +21,23 @@
             <span>Biblioteca</span>
         </div>
         <div class="action" role="button" tabindex="0">
-            <span class="material-symbols-outlined">logout</span>
-            <span>Sair</span>
+            <a href="index.html" class="logout-link">
+                <span class="material-symbols-outlined">logout</span>
+                <span>Sair</span>
+            </a>
         </div>
     </header>
 
     <div class="layout">
         <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
             <div class="nav-group">
-                <a class="nav-item " href="adminHome.html">
+                <a class="nav-item" href="adminHome.html">
                     <span class="material-symbols-outlined">home</span>
                     <span>Home</span>
                 </a>
             </div>
 
             <div class="nav-group">
-
                 <details class="accordion" id="books-acc">
                     <summary aria-controls="submenu-books" class="active" aria-expanded="false">
                         <span class="material-symbols-outlined">auto_stories</span>
@@ -46,10 +46,10 @@
                     </summary>
                     <div id="submenu-books" class="submenu" role="region" aria-label="Submenu Livros">
                         <a href="adminCadastrarLivros.html">Cadastrar</a>
-                        <a href="adminEmprestarLivros.html">Emprestar livros</a>
-                        <a href="#retirada">Retirada / Devolução de livros</a>
-                        <a href="#historico">Histórico</a>
-                        <a href="#listar">Listar todos</a>
+                        <a href="adminEmprestarLivros.html" class="submenu-active">Emprestar livros</a>
+                        <a href="adminLivrosRetiradaDevolucao.html">Retirada / Devolução de livros</a>
+                        <a href="adminLivrosHistorico.html">Histórico</a>
+                        <a href="adminLivrosListar.html">Listar todos</a>
                     </div>
                 </details>
             </div>
