--- a/adminLivrosRetiradaDevolucao.html
+++ b/adminLivrosRetiradaDevolucao.html
@@ -21,8 +21,10 @@
             <span>Biblioteca</span>
         </div>
         <div class="action" role="button" tabindex="0">
+            <a href="index.html"  class="logout-link">
             <span class="material-symbols-outlined">logout</span>
             <span>Sair</span>
+            </a>
         </div>
     </header>
 
@@ -45,9 +47,9 @@
                     <div id="submenu-books" class="submenu" role="region" aria-label="Submenu Livros">
                         <a href="adminCadastrarLivros.html">Cadastrar</a>
                         <a href="adminEmprestarLivros.html">Emprestar livros</a>
-                        <a href="#retirada">Retirada / Devolução de livros</a>
-                        <a href="#historico">Histórico</a>
-                        <a href="#listar">Listar todos</a>
+                        <a href="adminLivrosRetiradaDevolucao.html" class="submenu-active">Retirada / Devolução de livros</a>
+                        <a href="adminLivrosHistorico.html">Histórico</a>
+                        <a href="adminLivrosListar.html">Listar todos</a>
                     </div>
                 </details>
             </div>
