--- a/usuarioHistorico.html
+++ b/usuarioHistorico.html
@@ -26,25 +26,25 @@
     <!-- menu lateral -->
     <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
       <div class="nav-group">
-        <a class="nav-item active" href="usuarioHome.html">
+        <a class="nav-item " href="usuarioHome.html">
           <span class="material-symbols-outlined">menu_book</span>
           <span>Buscar livros</span>
         </a>
       </div>
       <div class="nav-group">
-        <a class="nav-item " href="usuarioHistorico.html">
+        <a class="nav-item active" href="usuarioHistorico.html">
           <span class="material-symbols-outlined">library_books</span>
           <span>Meus livros</span>
         </a>
       </div>
       <div class="nav-group">
-        <a class="nav-item" href="#meus-dados">
+        <a class="nav-item" href="usuarioDados.html">
           <span class="material-symbols-outlined">group</span>
           <span>Meus Dados</span>
         </a>
       </div>
       <div class="nav-group">
-        <a class="nav-item" href="#meus-dados">
+        <a class="nav-item" href="index.html">
           <span class="material-symbols-outlined">logout</span>
           <span>Sair</span>
         </a>
