--- a/adminHome.html
+++ b/adminHome.html
@@ -20,8 +20,10 @@
             <span>Biblioteca</span>
         </div>
         <div class="action" role="button" tabindex="0">
+            <a href="index.html"  class="logout-link">
             <span class="material-symbols-outlined">logout</span>
             <span>Sair</span>
+            </a>
         </div>
     </header>
 
@@ -40,12 +42,12 @@
                         <span>Livros </span>
                         <span class="material-symbols-outlined" id="icon-align-right"> keyboard_arrow_down</span>
                     </summary>
-                    <div id="submenu-books" class="submenu" role="region" aria-label="Submenu Livros">
+                   <div id="submenu-books" class="submenu" role="region" aria-label="Submenu Livros">
                         <a href="adminCadastrarLivros.html">Cadastrar</a>
                         <a href="adminEmprestarLivros.html">Emprestar livros</a>
-                        <a href="#retirada">Retirada / Devolução de livros</a>
-                        <a href="#historico">Histórico</a>
-                        <a href="#listar">Listar todos</a>
+                        <a href="adminLivrosRetiradaDevolucao.html">Retirada / Devolução de livros</a>
+                        <a href="adminLivrosHistorico.html">Histórico</a>
+                        <a href="adminLivrosListar.html">Listar todos</a>
                     </div>
                 </details>
             </div>
