--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <h1 class="title-login">Login</h1>
             <p>Insira o número de telefone cadastrado para receber o código de verificação</p>
             <!-- formulario -->
-            <form class="form-login">
-                <label for="label telefone-login">Telefone</label>
-                <input type="tel" id="telefone-login" name="telefone" class="input input-primary" required>
+            <form id="formLogin" class="form-login">
+                <label for="telefone">Telefone</label>
+                <input type="tel" id="telefone" name="telefone" class="input input-primary" required>
                 <button type="submit" class="btn btn-full">Enviar código</button>
             </form>
             <!-- fim formulario -->
@@ -29,7 +29,11 @@
         </section>
         <!-- fim card de login -->
     </div>
+    
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/login.js"></script>
 </body>
 
 </html>
