--- a/usuarioValidar.html
+++ b/usuarioValidar.html
@@ -30,6 +30,8 @@
         </section>
         <!-- fim card de recuperação -->
     </div>
+
+    <script src="assets/js/validar.js"></script>
 </body>
 
 </html>
