--- a/adminHome.html
+++ b/adminHome.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="nav-group">
-                <a class="nav-item" href="#usuarios">
+                <a class="nav-item" href="adminValidarUsuarios.html">
                     <span class="material-symbols-outlined">group</span>
                     <span>Verificar usuários</span>
                 </a>
