--- a/adminValidarUsuarios.html
+++ b/adminValidarUsuarios.html
@@ -54,7 +54,7 @@
                 </details>
             </div>
             <div class="nav-group">
-                <a class="nav-item active" href="#usuarios">
+                <a class="nav-item active" href="adminValidarUsuarios.html">
                     <span class="material-symbols-outlined">group</span>
                     <span>Verificar usuários</span>
                 </a>
@@ -82,65 +82,14 @@
                             <tr>
                                 <th>RA</th>
                                 <th>Nome</th>
-                                <th>E-mail</th>
+                                <th>Telefone</th>
                                 <th>Data de cadastro</th>
                                 <th>Status do cadastro</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td data-label="RA"><strong>2023101</strong></td>
-                                <td data-label="Nome">Maria Silva</td>
-                                <td data-label="E-mail">maria@email.com</td>
-                                <td data-label="Data de cadastro">12/04/2024</td>
-                                <td data-label="Status do cadastro">
-                                    <div class="status">
-                                        <div class="dot"></div>
-                                        <span>Pendente</span>
-                                    </div>
-                                </td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Validar</button></td>
-                            </tr>
-                            <tr>
-                                <td data-label="RA"><strong>2023102</strong></td>
-                                <td data-label="Nome">João Pereira</td>
-                                <td data-label="E-mail">joao@email.com</td>
-                                <td data-label="Data de cadastro">15/04/2024</td>
-                                <td data-label="Status do cadastro">
-                                    <div class="status">
-                                        <div class="dot"></div>
-                                        <span>Pendente</span>
-                                    </div>
-                                </td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Validar</button></td>
-                            </tr>
-                            <tr>
-                                <td data-label="RA"><strong>2023102</strong></td>
-                                <td data-label="Nome">João Pereira</td>
-                                <td data-label="E-mail">joao@email.com</td>
-                                <td data-label="Data de cadastro">15/04/2024</td>
-                                <td data-label="Status do cadastro">
-                                    <div class="status">
-                                        <div class="dot"></div>
-                                        <span>Pendente</span>
-                                    </div>
-                                </td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Validar</button></td>
-                            </tr>
-                            <tr>
-                                <td data-label="RA"><strong>2023103</strong></td>
-                                <td data-label="Nome">Ana Costa</td>
-                                <td data-label="E-mail">ana@email.com</td>
-                                <td data-label="Data de cadastro">18/04/2024</td>
-                                <td data-label="Status do cadastro">
-                                    <div class="status">
-                                        <div class="dot"></div>
-                                        <span>Pendente</span>
-                                    </div>
-                                </td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Validar</button></td>
-                            </tr>
+                            <!-- Linhas da tabela serão inseridas aqui dinamicamente -->
                         </tbody>
                     </table>
                 </div>
@@ -149,6 +98,7 @@
     </div>
 
 <script src="assets/js/script.js"></script>
+<script src="assets/js/adminValidarUsuarios.js"></script>
 </body>
-  <script src="assets/js/auth.js"></script>
+<script src="assets/js/auth.js"></script>
 </html>
