--- a/adminLivrosRetiradaDevolucao.html
+++ b/adminLivrosRetiradaDevolucao.html
@@ -54,7 +54,7 @@
                 </details>
             </div>
             <div class="nav-group">
-                <a class="nav-item" href="#usuarios">
+                <a class="nav-item" href="adminValidarUsuarios.html">
                     <span class="material-symbols-outlined">group</span>
                     <span>Verificar usuários</span>
                 </a>
