--- a/adminCadastrarLivros.html
+++ b/adminCadastrarLivros.html
@@ -87,11 +87,14 @@
                                 <input type="text" id="title" name="title" class="input" required>
                             </div>
                             <div class="form-group">
-                                <label for="authors">Autor(es) <span class="required">*</span> <span
-                                        class="hint">(separe
-                                        por vírgula)</span></label>
-                                <input type="text" id="authors" name="authors" class="input"
-                                    placeholder="Ex: Anna Santos, João Carvalho" required>
+                                <label>Autor(es) <span class="required">*</span></label>
+                                <div id="authors-container">
+                                    <div class="author-field">
+                                        <input type="text" name="authors[]" class="input author-input " placeholder="Nome do autor" required>
+                                        <button type="button" class="btn btn-add-author" title="Adicionar autor" style="margin-left: 5px;">+</button>
+                                    </div>
+                                </div>
+                                <small class="help-text">Clique em + para adicionar mais autores</small>
                             </div>
                         </div>
                     </div>
