exibindo informações do livro

--- a/adminLivrosListar.html
+++ b/adminLivrosListar.html
@@ -85,18 +85,8 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td data-label="Título do livro">Título do livro</td>
-                                <td data-label="Autor(es)">Autor do livro</td>
-                                <td data-label="Quantidade">1</td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Ver Mais</button></td>
-                            </tr>
-                            <tr>
-                                <td data-label="Título do livro">Título do livro</td>
-                                <td data-label="Autor(es)">Autor do livro</td>
-                                <td data-label="Quantidade">1</td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Ver Mais</button></td>
-                            </tr>
+                            <!-- Linhas da tabela serão inseridas aqui via JavaScript -->
+                           
                         </tbody>
                     </table>
                 </div>
@@ -104,5 +94,6 @@
         </main>
     </div>
 </body>
-  <script src="assets/js/auth.js"></script>
+    <script src="assets/js/listarLivros.js"></script>
+    <script src="assets/js/auth.js"></script>
 </html>
