--- a/adminLivroInfo.html
+++ b/adminLivroInfo.html
@@ -140,6 +140,7 @@
 
         </main>
 
+        <script src="assets/js/infoLivro.js"></script>
         <script src="assets/js/script.js"></script>
 </body>
 
