home ajuste nos links

--- a/adminHome.html
+++ b/adminHome.html
@@ -122,10 +122,10 @@
             <section class="shortcuts-section">
                 <h2 class="title section-title">Atalhos</h2>
                 <div class="shortcuts-grid">
-                    <button class="shortcut-btn">Emprestar livros</button>
-                    <button class="shortcut-btn">Retirada e Devolução</button>
-                    <button class="shortcut-btn">Todos os livros</button>
-                    <button class="shortcut-btn">Verificar usuários</button>
+                    <a href="adminEmprestarLivros.html" class="shortcut-btn">Emprestar livros</a>
+                    <a href="adminLivrosRetiradaDevolucao.html" class="shortcut-btn">Retirada e Devolução</a>
+                    <a href="adminLivrosListar.html" class="shortcut-btn">Todos os livros</a>
+                    <a href="adminValidarUsuarios.html" class="shortcut-btn">Verificar usuários</a>
                 </div>
             </section>
         </main>
