exibindo os livros para o usuario

--- a/usuarioHome.html
+++ b/usuarioHome.html
@@ -111,6 +111,7 @@
             <!-- fim da seção de livros -->
         </main>
     </div>
+    <script src="assets/js/usuarioLivros.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 <script src="assets/js/auth.js"></script>
